# Aurora_test

./: CMakeLists.txt  README.md  main.cpp  script.sh
src/: main.cpp
src/core/: CMakeLists.txt  core.cpp  core.h  myExceptions.cpp  myExceptions.h  path.cpp  path.h
