cmake_minimum_required(VERSION 3.22.1)
project(Aurora_test_lib CXX)
set(AURORA_TEST_LIB_LIBRARIES)
set(AURORA_TEST_LIB_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(AURORA_TEST_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(AURORA_TEST_LIB_INCLUDE_DIRS ${PROJECT_NAME} PARENT_SCOPE)